[gd_scene load_steps=6 format=2]

[ext_resource path="res://Map/RoomAssets1/Staircase.gd" type="Script" id=1]
[ext_resource path="res://Assets/Images/House/stairs.png" type="Texture" id=2]
[ext_resource path="res://Assets/Images/Arrow.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 62, 48 )

[sub_resource type="Animation" id=2]
resource_name = "Up"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.2, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -94, 17 ), Vector2( -94, 20 ) ]
}

[node name="Staircase" type="Area2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
z_index = -2
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -94, 64 )
shape = SubResource( 1 )

[node name="Sprite2" type="Sprite" parent="."]
visible = false
position = Vector2( -94, 18.2 )
texture = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite2"]
reset_on_save = false
anims/Up = SubResource( 2 )

[connection signal="body_entered" from="." to="." method="_on_Staircase_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Staircase_body_exited"]
